--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -1038,6 +1038,8 @@
 
     .service__ask {
       padding: 40px 20px;
+      position: relative;
+      top: 40px;
     }
     .service__form {
       gap: 15px;
