--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4156,6 +4156,8 @@ button {
   }
   .about .pagination-item .service__ask {
     padding: 40px 20px;
+    position: relative;
+    top: 40px;
   }
   .about .pagination-item .service__form {
     gap: 15px;
